# rfl-template

./: Cargo.toml  README.md
src/: cli.rs  generator.rs  main.rs
src/templates/: cargo_toml.rs  kbuild.rs  lib_rs.rs  mod.rs  readme.rs
test_driver/: Cargo.toml  Kbuild  README.md
test_driver/src/: lib.rs
