[package]
name = "rfl-template"
version = "0.1.1"
edition = "2021"
authors = ["RFL Template Contributors"]
description = "A CLI tool to scaffold Rust for Linux kernel modules"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bensantora/rfl-template"
keywords = ["linux", "kernel", "rfl", "template", "generator"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
